# ChineseBracketMaster

./: .gitignore  .replit  FIREBASE_SETUP.md  INSTALL.md  README.md  app.py  app_render.py  debug_firebase.py  firebase-key.json  main.py  models.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  routes.py  start_app.bat  test_firebase.py  tournament.py
attached_assets/: content-1746081627912.md  wave.html
instance/: chinese_chess.db
static/css/: chess-theme.css  new-styles.css  style.css  styles.css
static/js/: bracket.js  main.js  new-animations.js  theme.js
templates/: 404.html  500.html  index.html  layout.html  new-index.html  new-layout.html  new-tournament.html  players.html  tournament.html
templates/exports/: bracket_image.html  bracket_pdf.html
