[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "flask-wtf>=1.2.2",
    "weasyprint>=65.1",
    "html2image>=2.0.5",
    "firebase-admin>=6.5.0",
]
